// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ErrorSplash matches snapshot 1`] = `
<div
  className="splash"
>
  <h2
    className="ui icon center aligned header"
  >
    <i
      aria-hidden="true"
      className="red warning sign icon"
    />
    <div
      className="content"
    >
      Nasty error...
    </div>
  </h2>
</div>
`;

exports[`FrownSplash matches snapshot 1`] = `
<div
  className="splash"
>
  <h2
    className="ui icon center aligned header"
  >
    <i
      aria-hidden="true"
      className="orange frown icon"
    />
    <div
      className="content"
    >
      Still loading...
    </div>
  </h2>
</div>
`;

exports[`LoadingSplash matches snapshot 1`] = `
<div
  className="splash"
>
  <h2
    className="ui icon center aligned header"
  >
    <i
      aria-hidden="true"
      className="blue circle notch loading icon"
    />
    <div
      className="content"
    >
      Still loading...
    </div>
  </h2>
</div>
`;

exports[`Splash Renders the same as the last time Matches snapshot 1`] = `
<div
  className="splash"
>
  <h2
    className="ui icon center aligned header"
  >
    <i
      aria-hidden="true"
      className="red warning sign icon"
    />
    <div
      className="content"
    >
      Server Error
      <div
        className="sub header"
      >
        No response from server
      </div>
    </div>
  </h2>
</div>
`;

exports[`Splash Renders the same as the last time Matches snapshot 2`] = `
<div
  className="splash"
>
  <h2
    className="ui icon center aligned header"
  >
    <i
      aria-hidden="true"
      className="red spinner loading icon"
    />
    <div
      className="content"
    >
      Server Error
    </div>
  </h2>
</div>
`;
